--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,6 +19,11 @@ jobs:
       - name: Install dependencies
         run: npm install
 
+      - name: Debug dist folder
+        run: |
+          ls -la
+          ls -la dist
+            
       - name: Build
         run: npm run build
         continue-on-error: false
