--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,9 +23,13 @@ jobs:
           rm -rf node_modules package-lock.json
           npm install
 
+      - name: Run Prettier check
+        run: npm run prettier -- --check .
       - name: Run tests
         run: npm run test -- --run
 
+      - name: Run ESLint
+        run: npm run lint
       - name: Build
         run: npm run build
 
