--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "test": "vitest"
+    "test": "vitest",
+    "prettier": "prettier",
+    "prettier:check": "prettier --check .",
+    "prettier:write": "prettier --write ."
   },
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
@@ -27,7 +30,7 @@
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
     "jsdom": "^26.1.0",
-    "prettier": "3.5.3",
+    "prettier": "^3.5.3",
     "vite": "^6.3.5",
     "vite-plugin-eslint": "^1.8.1",
     "vitest": "^3.1.4"
