--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,7 +26,12 @@ jobs:
       - name: Run Prettier and auto-format
         run: npm run prettier:write
       - name: Run tests
-        run: npm run test -- --run
+        run: npm run test:coverage
+
+      - name: Upload coverage reports to Codecov
+        uses: codecov/codecov-action@v5
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
 
       - name: Run ESLint
         run: npm run lint
