--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,42 +1,27 @@
-name: CI
+name: CI with Local Docker Build
 
 on:
   pull_request:
-  push:
-    branches-ignore:
-      - main # skip main to avoid running deploy and ci twice on main push
+    branches: [main]
 
 jobs:
   test:
     runs-on: ubuntu-latest
-    env:
-      CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: 18
+      - name: Set up Docker Buildx (optional but recommended)
+        uses: docker/setup-buildx-action@v3
 
-      - name: Clean install to fix Rollup native module error
+      - name: Build Docker image
+        run: docker build -t vite-ci-image .
+
+      - name: Run tests inside Docker container
         run: |
-          rm -rf node_modules package-lock.json
-          npm install
-
-      - name: Run Prettier and auto-format
-        run: npm run prettier:write
-
-      - name: Run tests with coverage
-        run: npm run test:coverage
-
-      - name: Upload coverage reports to Codecov
-        uses: codecov/codecov-action@v5
-        with:
-          token: ${{ secrets.CODECOV_TOKEN }}
-          fail_ci_if_error: true
-
-      - name: Run ESLint
-        run: npm run lint
+          docker run --rm \
+            -v ${{ github.workspace }}:/app \
+            -w /app \
+            vite-ci-image \
+            sh -c "pnpm install && pnpm prettier --check . && pnpm lint && pnpm test"
