--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Set up Docker Buildx (optional but recommended)
         uses: docker/setup-buildx-action@v3
 
-      - name: Build Docker image
+      - name: Build Docker image and run
         run: docker build -t vite-ci-image .
 
       - name: Run tests inside Docker container
