--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: CI with Local Docker Build
+name: CI with Local Docker and npm
 
 on:
   pull_request:
@@ -12,10 +12,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Set up Docker Buildx (optional but recommended)
-        uses: docker/setup-buildx-action@v3
-
-      - name: Build Docker image and run
+      - name: Build Docker image
         run: docker build -t vite-ci-image .
 
       - name: Run tests inside Docker container
@@ -24,4 +21,8 @@ jobs:
             -v ${{ github.workspace }}:/app \
             -w /app \
             vite-ci-image \
-            sh -c "pnpm install && pnpm prettier --check . && pnpm lint && pnpm test"
+            sh -c "
+              npm run prettier:check || exit 1
+              npm run lint || exit 1
+              npm test || exit 1
+            "
